fix: improve color contrast of dark themes (#1249)

--- a/src/scss/themes/_base.scss
+++ b/src/scss/themes/_base.scss
@@ -116,4 +116,6 @@
   --floating-button-bg: #{rgba($main-bg-color, 0.8)};
   --floating-button-bg-hover: #{darken(rgba($main-bg-color, 0.9), 5%)};
   --floating-button-bg-active: #{darken(rgba($main-bg-color, 0.9), 10%)};
+
+  --length-indicator-color: #{$main-theme-color};
 }
