--- a/src/scss/themes/pitchblack.scss
+++ b/src/scss/themes/pitchblack.scss
@@ -29,9 +29,9 @@ $compose-background: darken($main-theme-color, 12%);
   --form-border: #{darken($border-color, 10%)};
 
 
-  --action-button-fill-color: #{$main-theme-color};
-  --action-button-fill-color-hover: #{lighten($main-theme-color, 4%)};
-  --action-button-fill-color-active: #{darken($main-theme-color, 13%)};
+  --action-button-fill-color: #{lighten($main-theme-color, 5%)};
+  --action-button-fill-color-hover: #{lighten($main-theme-color, 12%)};
+  --action-button-fill-color-active: #{darken($main-theme-color, 15%)};
   --action-button-fill-color-pressed: #{lighten($main-theme-color, 20%)};
   --action-button-fill-color-pressed-hover: #{lighten($main-theme-color, 24%)};
   --action-button-fill-color-pressed-active: #{lighten($main-theme-color, 7%)};
